--- a/src/index.css
+++ b/src/index.css
@@ -76,21 +76,15 @@
   align-items: center;
 }
 
-@media (max-width: 700px) {
+@media (max-width: 800px) {
   .TezosWallet .address {
     display: none;
   }
   .TezosWallet .connectWalletText {
     display: none;
   }
-  .TezosWalletMenu .label {
-    display: none;
-  }
-  .TezosWalletMenu .icon {
-    width: 100%;
-  }
 }
-@media (max-width: 420px) {
+@media (max-width: 500px) {
   .TezosWallet .balance, .TezosWallet .spacer {
     display: none;
   }
@@ -98,6 +92,9 @@
     padding: 0;
     border: 0;
     background-color: inherit;
+  }
+  .TezosWallet .connectWalletIcon {
+    margin: 0;
   }
   .TezosWallet .identityImage {
     width: 40px;
@@ -110,5 +107,8 @@
   }
   .TezosWallet .identityImage img {
     width: 40px;
+  }
+  .TezosWalletMenu {
+    width: 150px;
   }
 }
